[package]
name = "bullets_vs_bullets"
version = "0.1.0"
publish = false
authors = ["Adam Cvikl"]
edition = "2021"
exclude = ["dist", "build", "assets"]

[workspace]
members = ["mobile"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
dev = ["bevy/bevy_dylib"]

[dependencies]
bevy = "0"
virtual_joystick = "2"
