[package]
name = "mobile"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "mobile"
crate-type = ["staticlib", "cdylib"]

[dependencies]
bullets_vs_bullets = { path = ".." }
bevy = "0"

[package.metadata.android]
package = "com.adamekka.BulletsVsBulletsMobile"
apk_name = "BulletsVsBullets"
assets = "../assets"
strip = "strip"
resources = "../build/android/res"
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
target_sdk_version = 31

[package.metadata.android.application]
icon = "@mipmap/icon"
label = "Bullets vs Bullets"
